fix portfolio section spacing

--- a/src/components/sections/portfolio/portfolio.scss
+++ b/src/components/sections/portfolio/portfolio.scss
@@ -57,8 +57,10 @@
       margin-top: 20px;
       padding-bottom: 50px;
     }
+  }
+  @media (max-width: 650px) {
     &.outer-container {
-      padding-top: 0;
+      padding: 0;
     }
   }
 }
