--- a/src/components/sections/skills/skills.scss
+++ b/src/components/sections/skills/skills.scss
@@ -102,6 +102,12 @@
     }
   }
 
+  @media (max-width: 650px) {
+    &.outer-container {
+      padding: 0;
+    }
+  }
+
   @media (max-width: 550px) {
     .icon {
       height: 20px;
